--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./assets/skillsladder-logo.png" />
+    <link rel="icon" type="image/png" href="src/assets/skillsladder-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SkillsLadder</title>
     <link rel="stylesheet"
